--- a/när-man-vill/berätta-något.html
+++ b/när-man-vill/berätta-något.html
@@ -1,7 +1,7 @@
 ---
 layout: svenska
 title: Svenska Discord
-subtitle: Tips, hint, frequently asked questions, course material...
+subtitle: När man vill berätta något...
 show_downloads: false
 ---
 
