--- a/när-man-vill.html
+++ b/när-man-vill.html
@@ -1,9 +1,11 @@
 ---
 layout: svenska
 title: Svenska Discord
-subtitle: När man …
+subtitle: Sätt att uttrycka sig.
 show_downloads: false
 ---
+
+<h1>När man vill …</h1>
 
 {% for section in site.data.when_one_wants_to %}
 <h2>{{ section.name }}</h2>
