--- a/när-man-vill.html
+++ b/när-man-vill.html
@@ -5,7 +5,7 @@ subtitle: Sätt att uttrycka sig.
 show_downloads: false
 ---
 
-<h1>När man vill …</h1>
+<h1>När man …</h1>
 
 {% for section in site.data.when_one_wants_to %}
 <h2>{{ section.name }}</h2>
