--- a/när-man-vill.html
+++ b/när-man-vill.html
@@ -24,7 +24,7 @@ show_downloads: false
 	<tbody>
 {% for phrase in section.entries %}
 		<tr>
-			<td markdown="span" style="background-color: #aaaaaa;">{{ phrase.en }}</td>
+			<td markdown="span" style="background-color: #cccccc;">{{ phrase.en }}</td>
 			<td markdown="span">{{ phrase.sv }}</td>
 		</tr>
 
