--- a/faqs.html
+++ b/faqs.html
@@ -5,11 +5,13 @@ subtitle: Vanliga frågor.
 show_downloads: false
 ---
 
-<h1 title="Frequently Asked Questions">Vanliga Frågor …</h1>
+<h1 title="Frequently Asked Questions">Vanliga Frågor</h1>
+
+<hr />
 
 {% for faq in site.data.faqs %}
 <div>
-    <h2>Question</h2>
+    <h3>Question</h3>
     {{ faq.question | markdownify }}
 </div>
 
