--- a/faqs.html
+++ b/faqs.html
@@ -9,7 +9,7 @@ show_downloads: false
 
 {% for faq in site.data.faqs %}
 <div>
-    <h1>Question: <span style="font-size: 0.6em;">{{ faq.question}}</span></h1>
+    <h1>Question: <span style="font-size: 0.8em; line-height: 1.0em;">{{ faq.question}}</span></h1>
 </div>
 
 <div>
